# HardsHeap

./: .clang-format  .dockerignore  Dockerfile  README.md  build.sh  setup.sh
.github/workflows/: all.yml
artifact/: README.md  build.sh  minimize.py  run.py
artifact/secure-allocators/: README.md
artifact/secure-allocators/DieHarder-6cf204ec/: run.sh
artifact/secure-allocators/FreeGuard-bfdf6d9a/: libfreeguard.patch  run.sh
artifact/secure-allocators/Guarder-9e85978a/: libguarder.patch  run.sh
artifact/secure-allocators/MarkUs-4c75ffd5/: .gitignore  run.sh
artifact/secure-allocators/SlimGuard-237d842a/: .gitignore  libSlimGuard.patch  run.sh
artifact/secure-allocators/ffmalloc-9e1e5825/: .gitignore  run.sh
artifact/secure-allocators/hardened_malloc-5/: .gitignore  run.sh
artifact/secure-allocators/isoalloc-a683f427/: .gitignore  run.sh
artifact/secure-allocators/mallocng-2ed5881/: .gitignore  run.sh
artifact/secure-allocators/mimalloc-secure-1.7.0/: run.sh
artifact/secure-allocators/scudo-11.0.0/: run.sh
driver/: .gitignore  CMakeLists.txt  minimize.py  minimize_all.py
driver/child/: CMakeLists.txt  api.c  api.h  array.c  array.h  heap_manager.c  heap_manager.h  main.c  utils.c  utils.h
driver/common/: CMakeLists.txt  config.h  logging.c  logging.h  shared_memory.c  shared_memory.h  stream.c  stream.h  utils.c  utils.h
driver/modules/: .gitignore  CMakeLists.txt
driver/modules/adjacent/: CMakeLists.txt  child.c  parent.cpp
driver/modules/archeap/: CMakeLists.txt  child.c  parent.cpp  test_driver.py
driver/modules/check_on_free/: CMakeLists.txt  child.c
driver/modules/example/: CMakeLists.txt  child.c  parent.cpp
driver/modules/reclaim/: CMakeLists.txt  child.c
driver/modules/sizecheck/: CMakeLists.txt  child.c  parent.cpp
driver/modules/spray/: CMakeLists.txt  child.c  parent.cpp
driver/modules/uninitialized/: CMakeLists.txt  child.c  parent.cpp
driver/parent/: CMakeLists.txt  api.cpp  api.h  main.cpp
tool/: .gitignore  afl.patch
